--- a/deploy/image/Dockerfile
+++ b/deploy/image/Dockerfile
@@ -3,11 +3,10 @@ WORKDIR /app/opcua/server
 COPY src/requirements.txt /app/opcua/server/
 
 RUN apt-get update && apt-get install -y \
-build-essential \
-libssl-dev \
-libffi-dev \
-python3-dev 
+    build-essential \
+    libssl-dev \
+    libffi-dev \
+    python3-dev 
 
-RUN pip3 install -r requirements.txt
+RUN pip install -r requirements.txt
 EXPOSE 4840
-CMD [ "python3", "server.py" ]
